# Quire

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  cargo-sources.json  com.fvtronics.Quire.json  com.fvtronics.folios.json  meson.build  meson_options.txt  sonar-project.properties
.forgejo/workflows/: checks.yaml  pipeline.yaml  release.yaml
data/: com.fvtronics.Quire.desktop.in  com.fvtronics.Quire.gschema.xml  com.fvtronics.Quire.metainfo.xml.in  com.fvtronics.Quire.service.in  com.fvtronics.folios.desktop.in  com.fvtronics.folios.gschema.xml  com.fvtronics.folios.metainfo.xml.in  com.fvtronics.folios.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  es.po  et.po  folios.pot  meson.build  nl.po  quire.pot
scripts/: update-cargo-sources.sh
src/: application.rs  compress-workspace.blp  extract-workspace.blp  folios.gresource.xml  image.rs  main.rs  merge-workspace.blp  meson.build  metadata-workspace.blp  organize-workspace.blp  password-dialog.blp  pdf.rs  preview.rs  quire.gresource.xml  split-workspace.blp  watermark-workspace.blp  window.blp  window.rs  window.ui
src/pdf/: document.rs  metadata.rs  operations.rs  pages.rs  ranges.rs  tests.rs  types.rs
src/window/: compress.rs  extract.rs  merge.rs  metadata.rs  organize.rs  split.rs  state.rs  ui.rs  watermark.rs  workspace.rs
